# usb-serial-for-android

./: .gitignore  CMakeLists.txt  build.gradle  package.xml  settings.gradle
UsbSerialExamples/: .classpath  AndroidManifest.xml  build.gradle  project.properties
UsbSerialExamples/res/layout/: serial_console.xml
UsbSerialExamples/res/xml/: device_filter.xml
UsbSerialExamples/src/com/hoho/android/usbserial/examples/: SerialConsoleActivity.java
UsbSerialLibrary/: .classpath  build.gradle
UsbSerialLibrary/src/com/hoho/android/usbserial/driver/: CdcAcmSerialDriver.java  UsbId.java
UsbSerialLibrary/src/com/hoho/android/usbserial/util/: SerialInputOutputManager.java
UsbSerialLibrary/src/main/: AndroidManifest.xml
UsbSerialLibrary/src/main/java/com/hoho/android/usbserial/driver/: CdcAcmSerialDriver.java
gradle/wrapper/: gradle-wrapper.properties
